# sboxanalyzer

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  sboxanalyzer.py
.github/workflows/: test-and-publish.yml
sboxanalyzer/: __init__.py  build_espresso.py  espresso_loader.py
sboxanalyzer/binaries/: espresso-darwin-arm64  espresso-darwin-x86_64  espresso-linux-aarch64  espresso-linux-x86_64
sboxanalyzer/espresso_src/: CMakeLists.txt  README.md
sboxanalyzer/espresso_src/espresso/: black_white.c  canonical.c  cofactor.c  cols.c  compl.c  contain.c  cubestr.c  cvrin.c  cvrm.c  cvrmisc.c  cvrout.c  dominate.c  equiv.c  espresso.c  espresso.h  essen.c  essentiality.c  exact.c  expand.c  gasp.c  getopt.c  gimpel.c  hack.c  indep.c  irred.c  main.c  map.c  matrix.c  mincov.c  mincov_int.h  opo.c  pair.c  part.c  primes.c  reduce.c  rows.c  set.c  setc.c  sharp.c  sigma.c  (+11 more)
sboxanalyzer/espresso_src/utility/: copyright.h  cpu_time.c  port.h  prtime.c  strsav.c
scripts/: release.sh
tests/: __init__.py  test_sboxanalyzer.py
